--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "karma-coffee-preprocessor": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.2",
     "karma": "~0.10.9",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "grunt-gh-pages": "~0.9.1"
   },
   "engines": {
     "node": ">=0.8.0"
